# calendar_service

./: .dockerignore  .env  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  entrypoint.sh  migrate.sh  pyproject.toml  run.sh  run_tests.sh
app/: crud.py  main.py
app/database/: connection.py  database_config.py
app/models/: event_models.py
app/routes/: events.py
app/schemas/: event_schema.py
app/tests/: conftest.py  test_events.py  test_main.py
migrations/: env.py
migrations/versions/: 8b28d8428e05_initial_migration.py
